--- a/traditionssm/src/main/webapp/WEB-INF/web.xml
+++ b/traditionssm/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="MyWebApp" version="2.5">
-	<display-name>itcast-usermanage</display-name>
+	<display-name>cjx-usermanage</display-name>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
